tests/compile_failure/src/Utility/Integer.char.fail.cpp
#include <Phi/Utility/Integer.hpp>

int main()
{
    phi::Integer<char> i{255};
}
